@@ -103,9 +103,11 @@ include struct open struct type t = T end let x = T end
 Line 1, characters 15-41:
 1 | include struct open struct type t = T end let x = T end
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^
-Error: The type t/334 introduced by this open appears in the signature
-       Line 1, characters 46-47:
-         The value x has no valid type if t/334 is hidden
+Error: The type t introduced by this open appears in the signature.
+Line 1, characters 46-47:
+1 | include struct open struct type t = T end let x = T end
+                                                  ^
+  The value x has no valid type if t is hidden.
 |}];;
 
 module A = struct
@@ -123,9 +125,11 @@ Lines 3-6, characters 4-7:
 4 |       type t = T
 5 |       let x = T
 6 |     end
-Error: The type t/339 introduced by this open appears in the signature
-       Line 7, characters 8-9:
-         The value y has no valid type if t/339 is hidden
+Error: The type t introduced by this open appears in the signature.
+Line 7, characters 8-9:
+7 |     let y = x
+            ^
+  The value y has no valid type if t is hidden.
 |}];;
 
 module A = struct
@@ -142,9 +146,11 @@ Lines 3-5, characters 4-7:
 3 | ....open struct
 4 |       type t = T
 5 |     end
-Error: The type t/344 introduced by this open appears in the signature
-       Line 6, characters 8-9:
-         The value y has no valid type if t/344 is hidden
+Error: The type t introduced by this open appears in the signature.
+Line 6, characters 8-9:
+6 |     let y = T
+            ^
+  The value y has no valid type if t is hidden.
 |}]
 
 (* It was decided to not allow this anymore. *)
