@@ -21,6 +21,7 @@ open Outcometree
 
 val longident: formatter -> Longident.t -> unit
 val ident: formatter -> Ident.t -> unit
+val namespaced_ident: Shape.Sig_component_kind.t -> Ident.t -> string
 val tree_of_path: Path.t -> out_ident
 val path: formatter -> Path.t -> unit
 val string_of_path: Path.t -> string
@@ -34,13 +35,7 @@ module Out_name: sig
   val print: out_name -> string
 end
 
-type namespace =
-  | Type
-  | Module
-  | Module_type
-  | Class
-  | Class_type
-  | Other (** Other bypasses the unique name for identifier mechanism *)
+type namespace := Shape.Sig_component_kind.t option
 
 val strings_of_paths: namespace -> Path.t list -> string list
     (** Print a list of paths, using the same naming context to
@@ -69,7 +64,7 @@ module Conflicts: sig
         an identifier to avoid a name collision *)
 
   type explanation =
-    { kind: namespace;
+    { kind: Shape.Sig_component_kind.t;
       name:string;
       root_name:string;
       location:Location.t
